[package]
name = "stardb-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
async-trait = "0.1.79"
env_logger = "0.11.3"
log = "0.4.21"
pingora = "0.1.0"
pingora-core = "0.1.0"
pingora-proxy = "0.1.0"
