[package]
name = "stardb-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
env_logger = "0.11.5"
http = "1.1.0"
log = "0.4.22"
pingora = "0.3.0"
pingora-core = "0.3.0"
pingora-proxy = "0.3.0"
